--- a/hpython.cabal
+++ b/hpython.cabal
@@ -25,6 +25,7 @@ library
                        Language.Python.AST.LongStringChar
                        Language.Python.AST.ShortStringChar
                        Language.Python.AST.Symbols
+                       Language.Python.Parser
                        Data.Separated.After
                        Data.Separated.Before
                        Data.Separated.Between
@@ -32,9 +33,12 @@ library
   -- other-extensions:    
   build-depends:       base >=4.9 && <4.10
                      , text
-                     , papa
-                     , transformers
+                     , charset
                      , deriving-compat
+                     , papa
+                     , parsers
+                     , transformers
+                     , trifecta
   hs-source-dirs:      src
   default-language:    Haskell2010
   default-extensions:  NoImplicitPrelude
