--- a/hpython.cabal
+++ b/hpython.cabal
@@ -30,17 +30,34 @@ library
                        Data.Separated.After
                        Data.Separated.Before
                        Data.Separated.Between
-  -- other-modules:       
-  -- other-extensions:    
   build-depends:       base >=4.9 && <4.10
                      , text
                      , charset
                      , deriving-compat
-                     , papa
+                     , papa >=0.2 && <0.3
                      , parsers
-                     , pretty
+                     , pretty >=1.1 && <1.2
                      , transformers
-                     , trifecta
+                     , trifecta >=1.6 && <1.7
   hs-source-dirs:      src
   default-language:    Haskell2010
   default-extensions:  NoImplicitPrelude
+
+test-suite hpython-tests
+    type:                exitcode-stdio-1.0
+    hs-source-dirs:      test
+    main-is:             Main.hs
+    other-modules:       Test.Language.Python.ParserPrinter
+    build-depends:       base >=4.9 && <4.10
+                       , ansi-wl-pprint >=0.6 && <0.7
+                       , directory >=1.3 && <1.4
+                       , filepath >=1.4 && <1.5
+                       , hedgehog >=0.4 && <0.5
+                       , tasty >=0.11 && <0.12
+                       , tasty-hspec >=1.1 && <1.2
+                       , trifecta >=1.6 && <1.7
+                       , papa >=0.2 && <0.3
+                       , pretty >=1.1 && <1.2
+                       , hpython
+    default-extensions:  NoImplicitPrelude
+    default-language:    Haskell2010
