--- a/hpython.cabal
+++ b/hpython.cabal
@@ -37,7 +37,7 @@ library
                      , papa >=0.2 && <0.3
                      , parsers
                      , pretty >=1.1 && <1.2
-                     , transformers
+                     , transformers >=0.5 && <0.6
                      , trifecta >=1.6 && <1.7
   hs-source-dirs:      src
   default-language:    Haskell2010
@@ -48,6 +48,7 @@ test-suite hpython-tests
     hs-source-dirs:      test
     main-is:             Main.hs
     other-modules:       Test.Language.Python.ParserPrinter
+                       , Test.Language.Python.AST.Gen
     build-depends:       base >=4.9 && <4.10
                        , ansi-wl-pprint >=0.6 && <0.7
                        , directory >=1.3 && <1.4
@@ -58,6 +59,8 @@ test-suite hpython-tests
                        , trifecta >=1.6 && <1.7
                        , papa >=0.2 && <0.3
                        , pretty >=1.1 && <1.2
+                       , process >=1.6 && <1.7
+                       , transformers >=0.5 && <0.6
                        , hpython
     default-extensions:  NoImplicitPrelude
     default-language:    Haskell2010
