--- a/hpython.cabal
+++ b/hpython.cabal
@@ -31,10 +31,10 @@ library
                        Data.Separated.Before
                        Data.Separated.Between
   build-depends:       base >=4.9 && <4.10
-                     , text
+                     , text >= 1.2 && <1.3
                      , charset
                      , deriving-compat
-                     , papa >=0.2 && <0.3
+                     , papa >=0.3 && <0.4
                      , parsers
                      , pretty >=1.1 && <1.2
                      , transformers >=0.5 && <0.6
@@ -53,14 +53,16 @@ test-suite hpython-tests
                        , ansi-wl-pprint >=0.6 && <0.7
                        , directory >=1.3 && <1.4
                        , filepath >=1.4 && <1.5
-                       , hedgehog >=0.4 && <0.5
+                       , hedgehog >=0.5 && <0.6
                        , tasty >=0.11 && <0.12
                        , tasty-hspec >=1.1 && <1.2
                        , trifecta >=1.6 && <1.7
-                       , papa >=0.2 && <0.3
+                       , papa >=0.3 && <0.4
                        , pretty >=1.1 && <1.2
-                       , process >=1.6 && <1.7
+                       , process >=1.4 && <1.5
+                       , text >= 1.2 && <1.3
                        , transformers >=0.5 && <0.6
                        , hpython
+                       , tasty-hedgehog
     default-extensions:  NoImplicitPrelude
     default-language:    Haskell2010
