--- a/hpython.cabal
+++ b/hpython.cabal
@@ -18,7 +18,8 @@ cabal-version:       >=1.10
 
 library
   exposed-modules:     Language.Python.AST
-                       Language.Python.AST.BytesEscapeSeq
+                       Language.Python.AST.EscapeSeq
+                       Language.Python.AST.Digits
                        Language.Python.AST.Keywords
                        Language.Python.AST.LongBytesChar
                        Language.Python.AST.LongStringChar
@@ -39,6 +40,7 @@ library
                      , pretty >=1.1 && <1.2
                      , transformers >=0.5 && <0.6
                      , trifecta >=1.6 && <1.7
+                     , digit >=0.4 && <0.5
   hs-source-dirs:      src
   default-language:    Haskell2010
   default-extensions:  NoImplicitPrelude
