--- a/hpython.cabal
+++ b/hpython.cabal
@@ -41,6 +41,7 @@ library
                      , transformers >=0.5 && <0.6
                      , trifecta >=1.6 && <1.7
                      , digit >=0.4 && <0.5
+                     , containers >=0.5 && <0.6
   hs-source-dirs:      src
   default-language:    Haskell2010
   default-extensions:  NoImplicitPrelude
