Updated hedgehog generators for the AST changes

--- a/hpython.cabal
+++ b/hpython.cabal
@@ -44,6 +44,7 @@ library
                        Language.Python.AST.TermOperator
                        Language.Python.Parser
                        Language.Python.Parser.IR
+                       Language.Python.Parser.IR.SyntaxConfig
                        Language.Python.Parser.IR.Checker
                        Language.Python.Parser.SrcInfo
                        Language.Python.Printer
