--- a/hpython.cabal
+++ b/hpython.cabal
@@ -64,7 +64,7 @@ test-suite hpython-tests
                        , process >=1.4 && <1.5
                        , text >= 1.2 && <1.3
                        , transformers >=0.5 && <0.6
+                       , tasty-hedgehog >=0.1 && <0.2
                        , hpython
-                       , tasty-hedgehog
     default-extensions:  NoImplicitPrelude
     default-language:    Haskell2010
