--- a/hpython.cabal
+++ b/hpython.cabal
@@ -15,6 +15,7 @@ category:            Language
 build-type:          Simple
 extra-source-files:  ChangeLog.md
 cabal-version:       >=1.10
+tested-with:         GHC == 8.0.2
 
 library
   exposed-modules:     Language.Python.AST
