Almost finished implementing expressions

--- a/hpython.cabal
+++ b/hpython.cabal
@@ -44,13 +44,18 @@ library
                        Language.Python.AST.Symbols
                        Language.Python.AST.StringContent
                        Language.Python.AST.TermOperator
+                       Language.Python.AST.VarargsList
                        Language.Python.Parser
+                       Language.Python.Parser.Combinators
                        Language.Python.Parser.IR
                        Language.Python.Parser.IR.SyntaxConfig
                        Language.Python.Parser.IR.Checker
                        Language.Python.Parser.EscapeSeq
+                       Language.Python.Parser.Identifier
                        Language.Python.Parser.StringContent
                        Language.Python.Parser.SrcInfo
+                       Language.Python.Parser.Symbols
+                       Language.Python.Parser.VarargsList
                        Language.Python.Printer
                        Data.Separated.After
                        Data.Separated.Before
