--- a/hpython.cabal
+++ b/hpython.cabal
@@ -62,6 +62,7 @@ library
                        Data.Separated.After
                        Data.Separated.Before
                        Data.Separated.Between
+                       Text.Parser.Unspaced
   build-depends:       base >=4.9 && <4.10
                      , text >= 1.2 && <1.3
                      , charset
@@ -76,6 +77,7 @@ library
                      , mtl >=2.2 && <2.3
                      , dlist >=0.8 && <0.9
                      , validation >=0.5 && <0.6
+                     , unordered-containers >=0.2 && <0.3
   hs-source-dirs:      src
   default-language:    Haskell2010
   default-extensions:  NoImplicitPrelude
