--- a/hpython.cabal
+++ b/hpython.cabal
@@ -60,6 +60,7 @@ library
                        Language.Python.Parser.ArgsList
                        Language.Python.Parser.Combinators
                        Language.Python.Parser.Identifier
+                       Language.Python.Parser.Indentation
                        Language.Python.Parser.Keywords
                        Language.Python.Parser.SrcInfo
                        Language.Python.Parser.Symbols
@@ -90,6 +91,7 @@ library
                      , dlist >=0.8 && <0.9
                      , validation >=0.5 && <0.6
                      , unordered-containers >=0.2 && <0.3
+                     , indentation-trifecta ==0.0.1
   hs-source-dirs:      src
   default-language:    Haskell2010
   default-extensions:  NoImplicitPrelude
@@ -105,6 +107,7 @@ test-suite hpython-tests
                          Test.Language.Python.Gen.ArgList
                          Test.Language.Python.Gen.Combinators
                          Test.Language.Python.ParserPrinter
+                         Test.Language.Python.Parser.Indentation
     build-depends:       base >=4.9 && <4.10
                        , ansi-wl-pprint >=0.6 && <0.7
                        , directory >=1.3 && <1.4
