--- a/hpython.cabal
+++ b/hpython.cabal
@@ -56,8 +56,9 @@ library
                        Language.Python.IR.ArgsList
                        Language.Python.IR.Indentation
                        Language.Python.IR.Checker.ArgsList
+                       Language.Python.IR.ExprConfig
+                       Language.Python.IR.StatementConfig
                        Language.Python.IR.SyntaxChecker
-                       Language.Python.IR.SyntaxConfig
                        Language.Python.Parser.ArgsList
                        Language.Python.Parser.Combinators
                        Language.Python.Parser.Identifier
@@ -70,8 +71,11 @@ library
                        Language.Python.Printer.Keywords
                        Language.Python.Printer.Symbols
                        Language.Python.Statement.AST
+                       Language.Python.Statement.AST.AugAssign
                        Language.Python.Statement.IR
+                       -- Language.Python.Statement.IR.Checker
                        Language.Python.Statement.Parser
+                       Language.Python.Statement.Parser.AugAssign
                        Data.Functor.Sum.Lens
                        Data.Separated.After
                        Data.Separated.Before
@@ -93,6 +97,7 @@ library
                      , validation >=0.5 && <0.6
                      , unordered-containers >=0.2 && <0.3
                      , indentation-trifecta ==0.0.1
+                     , singletons >=2.2 && <2.3
   hs-source-dirs:      src
   default-language:    Haskell2010
   default-extensions:  NoImplicitPrelude
