--- a/hpython.cabal
+++ b/hpython.cabal
@@ -21,6 +21,7 @@ library
   exposed-modules:
                        Language.Python.AST.ArgsList
                        Language.Python.AST.Comment
+                       Language.Python.AST.DottedName
                        Language.Python.AST.Identifier
                        Language.Python.AST.IndentedLines
                        Language.Python.AST.Keywords
@@ -61,6 +62,7 @@ library
                        Language.Python.IR.SyntaxChecker
                        Language.Python.Parser.ArgsList
                        Language.Python.Parser.Combinators
+                       Language.Python.Parser.DottedName
                        Language.Python.Parser.Identifier
                        Language.Python.Parser.Indentation
                        Language.Python.Parser.Keywords
@@ -68,16 +70,19 @@ library
                        Language.Python.Parser.Symbols
                        Language.Python.Printer.ArgsList
                        Language.Python.Printer.Combinators
+                       Language.Python.Printer.DottedName
+                       Language.Python.Printer.IndentedLines
                        Language.Python.Printer.Keywords
                        Language.Python.Printer.Symbols
                        Language.Python.Statement.AST.AugAssign
-                       Language.Python.Statement.AST.DottedName
                        Language.Python.Statement.AST.Imports
                        Language.Python.Statement.IR
                        Language.Python.Statement.IR.Checker
                        Language.Python.Statement.Parser
                        Language.Python.Statement.Parser.AugAssign
-                       Language.Python.Statement.Parser.DottedName
+                       Language.Python.Statement.Printer
+                       Language.Python.Statement.Printer.AugAssign
+                       Language.Python.Statement.Printer.Imports
                        Data.Functor.Sum.Lens
                        Data.Separated.After
                        Data.Separated.Before
@@ -116,6 +121,7 @@ test-suite hpython-tests
                          Test.Language.Python.Gen.Combinators
                          Test.Language.Python.ParserPrinter
                          Test.Language.Python.Parser.Indentation
+                         Test.Language.Python.Statement.Gen
     build-depends:       base >=4.9 && <4.10
                        , ansi-wl-pprint >=0.6 && <0.7
                        , directory >=1.3 && <1.4
