--- a/hpython.cabal
+++ b/hpython.cabal
@@ -26,6 +26,7 @@ library
                        Language.Python.AST.IndentedLines
                        Language.Python.AST.Keywords
                        Language.Python.AST.Symbols
+                       Language.Python.AST.TestlistStarExpr
                        Language.Python.Expr.AST
                        Language.Python.Expr.AST.BytesLiteral
                        Language.Python.Expr.AST.BytesPrefix
@@ -57,9 +58,11 @@ library
                        Language.Python.IR.ArgsList
                        Language.Python.IR.Indentation
                        Language.Python.IR.Checker.ArgsList
+                       Language.Python.IR.Checker.TestlistStarExpr
                        Language.Python.IR.ExprConfig
                        Language.Python.IR.StatementConfig
                        Language.Python.IR.SyntaxChecker
+                       Language.Python.IR.TestlistStarExpr
                        Language.Python.Parser.ArgsList
                        Language.Python.Parser.Combinators
                        Language.Python.Parser.DottedName
@@ -68,6 +71,7 @@ library
                        Language.Python.Parser.Keywords
                        Language.Python.Parser.SrcInfo
                        Language.Python.Parser.Symbols
+                       Language.Python.Parser.TestlistStarExpr
                        Language.Python.Printer.ArgsList
                        Language.Python.Printer.Combinators
                        Language.Python.Printer.DottedName
@@ -75,10 +79,10 @@ library
                        Language.Python.Printer.IndentedLines
                        Language.Python.Printer.Keywords
                        Language.Python.Printer.Symbols
+                       Language.Python.Printer.TestlistStarExpr
                        Language.Python.Statement.AST
                        Language.Python.Statement.AST.AugAssign
                        Language.Python.Statement.AST.Imports
-                       Language.Python.Statement.AST.TestlistStarExpr
                        Language.Python.Statement.IR
                        Language.Python.Statement.IR.Checker
                        Language.Python.Statement.Parser
@@ -125,10 +129,10 @@ test-suite hpython-tests
                          Test.Language.Python.Gen.DottedName
                          Test.Language.Python.Gen.Identifier
                          Test.Language.Python.Gen.IndentedLines
+                         Test.Language.Python.Gen.TestlistStarExpr
                          Test.Language.Python.ParserPrinter
                          Test.Language.Python.Parser.Indentation
                          Test.Language.Python.Statement.Gen
-                         Test.Language.Python.Statement.TestlistStarExpr
     build-depends:       base >=4.9 && <4.10
                        , ansi-wl-pprint >=0.6 && <0.7
                        , directory >=1.3 && <1.4
