--- a/hpython.cabal
+++ b/hpython.cabal
@@ -87,6 +87,7 @@ library
                        Language.Python.Statement.IR.Checker
                        Language.Python.Statement.Parser
                        Language.Python.Statement.Parser.AugAssign
+                       Language.Python.Statement.Parser.Imports
                        Language.Python.Statement.Printer
                        Language.Python.Statement.Printer.AugAssign
                        Language.Python.Statement.Printer.Imports
@@ -101,7 +102,7 @@ library
                      , charset
                      , deriving-compat
                      , papa >=0.3 && <0.4
-                     , parsers
+                     , parsers >=0.12.7 && < 0.13
                      , pretty >=1.1 && <1.2
                      , transformers >=0.5 && <0.6
                      , trifecta >=1.6 && <1.7
@@ -111,7 +112,7 @@ library
                      , dlist >=0.8 && <0.9
                      , validation >=0.5 && <0.6
                      , unordered-containers >=0.2 && <0.3
-                     , indentation-trifecta ==0.0.1
+                     , indentation-trifecta ==0.0.2
                      , singletons >=2.2 && <2.3
   hs-source-dirs:      src
   default-language:    Haskell2010
@@ -148,5 +149,6 @@ test-suite hpython-tests
                        , transformers >=0.5 && <0.6
                        , tasty-hedgehog >=0.1 && <0.2
                        , hpython
+    ghc-options:         -rtsopts -O2
     default-extensions:  NoImplicitPrelude
     default-language:    Haskell2010
