Working on full module parsing

--- a/hpython.cabal
+++ b/hpython.cabal
@@ -67,6 +67,11 @@ library
                        Language.Python.IR.StatementConfig
                        Language.Python.IR.SyntaxChecker
                        Language.Python.IR.TestlistStarExpr
+                       Language.Python.Module.AST
+                       Language.Python.Module.IR
+                       Language.Python.Module.IR.Checker
+                       Language.Python.Module.Parser
+                       Language.Python.Module.Printer
                        Language.Python.Parser.ArgsList
                        Language.Python.Parser.ArgumentList
                        Language.Python.Parser.Combinators
