--- a/hpython.cabal
+++ b/hpython.cabal
@@ -75,6 +75,7 @@ library
                        Language.Python.Parser.ArgsList
                        Language.Python.Parser.ArgumentList
                        Language.Python.Parser.Combinators
+                       Language.Python.Parser.Comment
                        Language.Python.Parser.DottedName
                        Language.Python.Parser.Identifier
                        Language.Python.Parser.Indentation
