--- a/hpython.cabal
+++ b/hpython.cabal
@@ -160,6 +160,7 @@ test-suite hpython-tests
                        , text >= 1.2 && <1.3
                        , transformers >=0.5 && <0.6
                        , tasty-hedgehog >=0.1 && <0.2
+                       , mtl >=2.2 && <2.3
                        , hpython
     ghc-options:         -rtsopts -O2
     default-extensions:  NoImplicitPrelude
