--- a/hpython.cabal
+++ b/hpython.cabal
@@ -34,6 +34,7 @@ library
                      , parsers
                      , trifecta
                      , mtl
+                     , bytestring-trie >=0.2
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -O2
