--- a/hpython.cabal
+++ b/hpython.cabal
@@ -58,7 +58,8 @@ executable example
 test-suite hpython-tests
   main-is:             Main.hs
   type:                exitcode-stdio-1.0
-  other-modules:       Generators
+  other-modules:       Generators.General
+                     , Generators.Common
   hs-source-dirs:      test
   build-depends:       base >=4.9 && <4.11
                      , hpython
@@ -66,6 +67,7 @@ test-suite hpython-tests
                      , lens
                      , process
                      , transformers
+                     , trifecta
   default-language:    Haskell2010
   ghc-options:         -O2
                        -Wincomplete-patterns
