--- a/hpython.cabal
+++ b/hpython.cabal
@@ -6,7 +6,7 @@ version:             0.1.0.0
 -- synopsis:            
 -- description:         
 license:             BSD3
-license-file:        LICENSE
+license-file:        LICENCE
 author:              Isaac Elliott
 maintainer:          isaace71295@gmail.com
 -- copyright:           
