--- a/hpython.cabal
+++ b/hpython.cabal
@@ -26,7 +26,9 @@ library
                      , Language.Python.Internal.Syntax.CommaSep
                      , Language.Python.Internal.Syntax.Expr
                      , Language.Python.Internal.Syntax.Ident
+                     , Language.Python.Internal.Syntax.Keyword
                      , Language.Python.Internal.Syntax.Module
+                     , Language.Python.Internal.Syntax.ModuleNames
                      , Language.Python.Internal.Syntax.Statement
                      , Language.Python.Internal.Syntax.Token
                      , Language.Python.Internal.Syntax.Whitespace
