--- a/hpython.cabal
+++ b/hpython.cabal
@@ -47,6 +47,7 @@ library
                      , trifecta
                      , mtl
                      , bytestring-trie >=0.2
+                     , containers >=0.5 && <0.6
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -O2
