--- a/hpython.cabal
+++ b/hpython.cabal
@@ -48,6 +48,8 @@ library
                      , mtl
                      , bytestring-trie >=0.2
                      , containers >=0.5 && <0.6
+                     , deriving-compat >=0.4 && <0.5
+                     , semigroupoids >=5.2.2 && <5.3
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -O2
@@ -77,6 +79,7 @@ test-suite hpython-tests
   other-modules:       Generators.General
                      , Generators.Common
                      , Generators.Correct
+                     , LexerParser
                      , Scope
                      , Roundtrip
   hs-source-dirs:      test
@@ -88,6 +91,7 @@ test-suite hpython-tests
                      , lens
                      , mtl
                      , process
+                     , semigroupoids >=5.2.2 && <5.3
                      , transformers
                      , trifecta
   default-language:    Haskell2010
