--- a/hpython.cabal
+++ b/hpython.cabal
@@ -50,6 +50,7 @@ library
                      , containers >=0.5 && <0.6
                      , deriving-compat >=0.4 && <0.5
                      , semigroupoids >=5.2.2 && <5.3
+                     , fingertree >=0.1 && <0.2
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -O2
