--- a/hpython.cabal
+++ b/hpython.cabal
@@ -44,6 +44,7 @@ library
                      , Language.Python.Validate.Indentation.Error
   build-depends:       base >=4.9 && <4.11
                      , digit >=0.6
+                     , dlist >=0.8 && <0.9
                      , lens
                      , type-level-sets >=0.8.6.0
                      , parsers
