Started a benchmark suite so I can see which things improve performance

--- a/hpython.cabal
+++ b/hpython.cabal
@@ -79,6 +79,17 @@ executable example
                        -Wunused-imports
                        -Werror
 
+executable benchmarks
+  main-is:             Main.hs
+  hs-source-dirs:      benchmarks
+  build-depends:       base >=4.9 && <4.11, hpython, trifecta, criterion, deepseq
+  default-language:    Haskell2010
+  ghc-options:         -O2
+                       -Wincomplete-patterns
+                       -Wincomplete-record-updates
+                       -Wunused-imports
+                       -Werror
+
 test-suite hpython-tests
   main-is:             Main.hs
   type:                exitcode-stdio-1.0
