--- a/hpython.cabal
+++ b/hpython.cabal
@@ -55,10 +55,11 @@ library
                      , containers >=0.5 && <0.6
                      , deriving-compat >=0.4 && <0.5
                      , semigroupoids >=5.2.2 && <5.3
+                     , text >=1.2 && <1.3
                      , these >=0.7.4 && <0.7.5
   hs-source-dirs:      src
   default-language:    Haskell2010
-  ghc-options:         -O2
+  ghc-options:         -O
                        -Wincomplete-patterns
                        -Wincomplete-record-updates
                        -Wunused-imports
@@ -73,7 +74,7 @@ executable example
   hs-source-dirs:      example
   build-depends:       base >=4.9 && <4.11, lens, hpython
   default-language:    Haskell2010
-  ghc-options:         -O2
+  ghc-options:         -O
                        -Wincomplete-patterns
                        -Wincomplete-record-updates
                        -Wunused-imports
@@ -84,7 +85,7 @@ executable benchmarks
   hs-source-dirs:      benchmarks
   build-depends:       base >=4.9 && <4.11, hpython, trifecta, criterion, deepseq
   default-language:    Haskell2010
-  ghc-options:         -O2
+  ghc-options:         -O
                        -Wincomplete-patterns
                        -Wincomplete-record-updates
                        -Wunused-imports
@@ -116,7 +117,7 @@ test-suite hpython-tests
                      , trifecta
                      , these >=0.7.4 && <0.7.5
   default-language:    Haskell2010
-  ghc-options:         -O2
+  ghc-options:         -O
                        -Wincomplete-patterns
                        -Wincomplete-record-updates
                        -Wunused-imports
