--- a/hpython.cabal
+++ b/hpython.cabal
@@ -48,7 +48,7 @@ library
                      , lens
                      , type-level-sets >=0.8.6.0
                      , parsers
-                     , trifecta
+                     , megaparsec >=6.3 && <6.4
                      , fingertree >=0.1 && <0.2
                      , mtl
                      , bytestring-trie >=0.2
@@ -57,6 +57,7 @@ library
                      , semigroupoids >=5.2.2 && <5.3
                      , text >=1.2 && <1.3
                      , these >=0.7.4 && <0.7.5
+                     , parsers-megaparsec
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -O
@@ -83,7 +84,12 @@ executable example
 executable benchmarks
   main-is:             Main.hs
   hs-source-dirs:      benchmarks
-  build-depends:       base >=4.9 && <4.11, hpython, trifecta, criterion, deepseq
+  build-depends:       base >=4.9 && <4.11
+                     , hpython
+                     , megaparsec
+                     , criterion
+                     , deepseq
+                     , text
   default-language:    Haskell2010
   ghc-options:         -O
                        -Wincomplete-patterns
@@ -115,7 +121,7 @@ test-suite hpython-tests
                      , semigroupoids >=5.2.2 && <5.3
                      , text >=1.2 && <1.3
                      , transformers
-                     , trifecta
+                     , megaparsec >=6.3 && <6.4
                      , these >=0.7.4 && <0.7.5
   default-language:    Haskell2010
   ghc-options:         -O
