--- a/hpython.cabal
+++ b/hpython.cabal
@@ -73,7 +73,7 @@ executable example
                      , OptimizeTailRecursion
                      , Programs
   hs-source-dirs:      example
-  build-depends:       base >=4.9 && <4.11, lens, hpython
+  build-depends:       base >=4.9 && <4.11, lens, hpython, text
   default-language:    Haskell2010
   ghc-options:         -O
                        -Wincomplete-patterns
