--- a/hpython.cabal
+++ b/hpython.cabal
@@ -57,7 +57,7 @@ library
                      , semigroupoids >=5.2.2 && <5.3
                      , text >=1.2 && <1.3
                      , these >=0.7.4 && <0.7.5
-                     , parsers-megaparsec
+                     , parsers-megaparsec >=0.1 && <0.2
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -O
