--- a/hpython.cabal
+++ b/hpython.cabal
@@ -17,6 +17,7 @@ cabal-version:       >=1.10
 
 library
   exposed-modules:     Data.Validate
+                     , Data.Validate.Monadic
                      , Language.Python.Syntax
                      , Language.Python.Internal.Lexer
                      , Language.Python.Internal.Optics
@@ -24,11 +25,14 @@ library
                      , Language.Python.Internal.Render
                      , Language.Python.Internal.Syntax
                      , Language.Python.Internal.Token
+                     , Language.Python.Internal.Syntax.AugAssign
                      , Language.Python.Internal.Syntax.BinOp
                      , Language.Python.Internal.Syntax.Comment
                      , Language.Python.Internal.Syntax.CommaSep
                      , Language.Python.Internal.Syntax.Expr
                      , Language.Python.Internal.Syntax.Ident
+                     , Language.Python.Internal.Syntax.Import
+                     , Language.Python.Internal.Syntax.IR
                      , Language.Python.Internal.Syntax.Module
                      , Language.Python.Internal.Syntax.ModuleNames
                      , Language.Python.Internal.Syntax.Numbers
