--- a/hpython.cabal
+++ b/hpython.cabal
@@ -112,6 +112,7 @@ test-suite hpython-tests
                      , Generators.Common
                      , Generators.Correct
                      , Generators.Sized
+                     , DSL
                      , Helpers
                      , LexerParser
                      , Scope
