--- a/hpython.cabal
+++ b/hpython.cabal
@@ -51,21 +51,21 @@ library
                      , Language.Python.Validate.Indentation
                      , Language.Python.Validate.Indentation.Error
   build-depends:       base >=4.9 && <5
-                     , bifunctors
-                     , bytestring
+                     , bifunctors >= 0.1 && < 5.6
+                     , bytestring >= 0.10 && < 0.11
                      , digit >=0.7 && < 0.8
                      , dlist >=0.8 && <0.9
-                     , lens
+                     , lens >= 4 && < 4.18
                      , type-level-sets >=0.8.7 && < 0.9
-                     , parsers
+                     , parsers >= 0.10 && < 0.13
                      , megaparsec >=6.3 && <7.1
                      , fingertree >=0.1 && <0.2
-                     , mtl
+                     , mtl >= 2.1 && < 2.3
                      , containers >=0.5.8 && <0.7
                      , deriving-compat >=0.4 && <0.6
                      , semigroupoids >=5.2.2 && <5.4
                      , text >=1.2 && <1.3
-                     , these >=0.7.4 && <0.7.5
+                     , these >=0.7.4 && <0.8
                      , parsers-megaparsec >=0.1 && <0.2
   hs-source-dirs:      src
   default-language:    Haskell2010
@@ -95,8 +95,8 @@ executable bench
   hs-source-dirs:      benchmarks
   build-depends:       base >=4.9 && <5
                      , hpython
-                     , megaparsec
-                     , criterion
+                     , megaparsec >=6.3 && < 7.1
+                     , criterion >= 1 && < 1.6
                      , deepseq
                      , text
   default-language:    Haskell2010
@@ -124,15 +124,15 @@ test-suite hpython-tests
                      , digit >=0.7 && < 0.8
                      , filepath
                      , hpython
-                     , hedgehog
+                     , hedgehog >= 0.5 && < 0.7
                      , lens
                      , mtl
                      , process
-                     , semigroupoids >=5.2.2 && <5.3
+                     , semigroupoids >=5.2.2 && <5.4
                      , text >=1.2 && <1.3
                      , transformers
-                     , megaparsec >=6.3 && <6.4
-                     , these >=0.7.4 && <0.7.5
+                     , megaparsec >=6.3 && < 7.1
+                     , these >=0.7.4 && <0.8
   default-language:    Haskell2010
   ghc-options:         -O
                        -Wincomplete-patterns
