--- a/hpython.cabal
+++ b/hpython.cabal
@@ -17,7 +17,6 @@ cabal-version:       >=1.10
 
 library
   exposed-modules:     Data.Type.Set
-                     , Data.Validate
                      , Data.Validate.Monadic
                      , Language.Python.Internal.Lexer
                      , Language.Python.Internal.Optics
@@ -66,6 +65,7 @@ library
                      , semigroupoids >=5.2.2 && <5.4
                      , text >=1.2 && <1.3
                      , these >=0.7.4 && <0.8
+                     , validation >= 1 && < 1.1
                      , parsers-megaparsec >=0.1 && <0.2
   hs-source-dirs:      src
   default-language:    Haskell2010
@@ -134,6 +134,7 @@ test-suite hpython-tests
                      , transformers
                      , megaparsec >=6.3 && < 7.1
                      , these >=0.7.4 && <0.8
+                     , validation >= 1 && < 1.1
   default-language:    Haskell2010
   ghc-options:         -O
                        -Wincomplete-patterns
